# GradientEchoes

./: .gitignore  .pre-commit-config.yaml  BFGS  Conjugate_Gradient  Newton's Method  README.md  Steepest_Descent  least_Square  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Quantum/: Deutsch-Jozsa  Grover’s algorithm  Quantum Phase Estimation (QPE)  Variational Quantum Eigensolver (VQE)
docs/assets/: style.mplstyle
examples/: __init__.py  box_constraint_demo.p  compare_optimizers_plot.py  hello_gradient.py  onecycle_sgd_quadratic.py  parameter_shift_demo.py  qaoa_maxcut_toy.py  qspsa_vqe_toy.py  rmsprop_logistic.py  vqe_rosenbrock.py
examples/classical/: rosenbrock_demo.py
gradient_echoes/: __init__.py  core.py  mathops.py  optimizers.py  typing.py  utils.py
gradient_echoes/algorithms/: _init_.py  bfgs.py  bfgs_wrapper.py  gradient_descent.py  particle_swarm.py  simulated_annealing.py
gradient_echoes/classical/: __init__.py  adagrad.py  adam.py  amsgrad.py  lbfgs.py  nelder_mead.py  rmsprop.py  sgd.py  spsa.py
gradient_echoes/core/: __init__.py  callbacks.py  objective.py  oracle.py  schedules.py
gradient_echoes/quantum/: __init__.py  qaoa.py  (+4 more)
metaheuristics/: Cuckoo Search  Firefly Algorithm  Genetic Algorithm  Grey Wolf Optimizer  Nelder-Mead Simplex Method  Particle Swarm Optimization  differential_evolutio
scripts/: plot_loss_curves.py  plot_rosen_contour.py  plot_rosenbrock_3d.py
tests/: test_adagrad.py  test_adam.py  test_amsgrad.py  test_basic.py  test_onecycle_shape.py  test_parameter_shift.py  test_rmsprop.py  test_spsa.py
(+5 files in other folders)
