[project]
name = "gradient-echoes"
version = "0.1.0"
description = "Classical + quantum optimization playground with clean abstractions."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Manaswani" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5.0", "black>=24.3", "isort>=5.13"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
ignore = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q"
